# udemy_ia

./: Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml
api/: routers.py
api/v1/: schemas.py  text_router.py  utils.py  vision_router.py
app/api/: routers.py
app/api/v1/: audio_router.py  schemas.py  text_router.py  vision_router.py
app/services/: openai_service.py
front/: main.py
front/page/: image_page.py  moderation_page.py  text_page.py  transcricao_page.py  translations_page.py
front/page/controller/: controller.py
services/: open_ai.py
