[tool.poetry]
name = "udemy-ia"
version = "0.1.0"
description = ""
authors = ["mielesantos <mielesnts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
openai = "^1.60.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.20"
streamlit = "^1.41.1"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
ruff = "^0.9.3"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
